WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278522
RELEASE_ASSERT that ObjectIdentifier is valid when constructed from a raw value
https://bugs.webkit.org/show_bug.cgi?id=278522
Summary
RELEASE_ASSERT that ObjectIdentifier is valid when constructed from a raw value
Chris Dumez
Reported
2024-08-22 08:03:25 PDT
We recently made it so that ObjectIdentifier no longer has a default constructor or an "invalid" state. However, a call site could still in theory construct an ObjectIdentifier with a raw value of 0 to construct an invalid identifier. Doing so would only hit an assertion in debug builds. For hardening, I'm suggesting we turn this debug assertion into a release one. This tested as performance neutral.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-08-22 08:05:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32590
EWS
Comment 2
2024-08-22 21:00:10 PDT
Committed
282646@main
(576330780972): <
https://commits.webkit.org/282646@main
> Reviewed commits have been landed. Closing PR #32590 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-08-22 21:01:19 PDT
<
rdar://problem/134545098
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug